# dialog2rasa

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: pr-validation-ci.yml  python-publish.yml
dialog2rasa/: cli.py  convert_dialogflow_to_rasa.py  converter.py
dialog2rasa/common/: converters.py  io.py  loggers.py
dialog2rasa/converters/: base.py  core.py  manager.py  utterance.py
dialog2rasa/utils/: converters.py  general.py  io.py
docs/: conversion-process-diagram.md  file-generation-process.md
src/dialog2rasa/: cli.py
src/dialog2rasa/converters/: base.py  core.py  entity.py  entity_slot.py  intent.py  manager.py  slot.py  utterance.py
src/dialog2rasa/utils/: formatting.py  general.py  io.py
tests/: test_converter.py
tests/mockup-agent/entities/: full_name.json  full_name_entries_de.json  yes.json  yes_entries_en.json
tests/mockup-agent/intents/: chitchat.start.json  chitchat.start_usersays_de.json  chitchat.start_usersays_en.json  default.cancel.json  default.cancel_usersays_de.json  default.cancel_usersays_en.json
tests/mockup-agent/reference_output/: domain.yml
tests/mockup-agent/reference_output/data/nlu/: mockup_agent.yml
tests/mockup-agent/reference_output/en/: domain.yml
tests/mockup-agent/reference_output/en/data/nlu/: __compound__full_name.yml  mockup-agent.yml
tests/mockup-agent/reference_output/en/data/nlu/lookup/: yes.txt
