[tool.poetry]
name = "dialog2rasa"
version = "0.1.0"
description = "Dialogflow to Rasa > 3.0 agent converter."
readme = "README.md"
authors = ["Murilo Bellatini"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dialog2rasa = "dialog2rasa.cli:main"
